compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARROW
    CARET
    COMPTIME
    ENUM
    EXTERN
    FATARROW
    INLINE
    PUB
    SWITCH
    TILDE
    UNION

Grammar

Rule 0     S' -> program
Rule 1     program -> declarations_opt
Rule 2     declarations_opt -> declarations
Rule 3     declarations_opt -> empty
Rule 4     declarations -> declarations declaration
Rule 5     declarations -> declaration
Rule 6     declaration -> var_decl SEMICOLON
Rule 7     declaration -> fn_decl
Rule 8     var_decl -> CONST IDENT type_annotation_opt EQ expression
Rule 9     var_decl -> VAR IDENT type_annotation_opt EQ expression
Rule 10    var_decl -> VAR IDENT type_annotation
Rule 11    type_annotation_opt -> type_annotation
Rule 12    type_annotation_opt -> empty
Rule 13    type_annotation -> COLON type_expr
Rule 14    fn_decl -> FN IDENT LPAREN params_opt RPAREN return_type_opt block
Rule 15    params_opt -> params
Rule 16    params_opt -> empty
Rule 17    params -> params COMMA param
Rule 18    params -> param
Rule 19    param -> IDENT COLON type_expr
Rule 20    return_type_opt -> type_expr
Rule 21    return_type_opt -> empty
Rule 22    type_expr -> IDENT
Rule 23    type_expr -> TYPE_VOID
Rule 24    type_expr -> TYPE_BOOL
Rule 25    type_expr -> TYPE_USIZE
Rule 26    type_expr -> TYPE_ISIZE
Rule 27    type_expr -> TYPE_U8
Rule 28    type_expr -> TYPE_U16
Rule 29    type_expr -> TYPE_U32
Rule 30    type_expr -> TYPE_U64
Rule 31    type_expr -> TYPE_I8
Rule 32    type_expr -> TYPE_I16
Rule 33    type_expr -> TYPE_I32
Rule 34    type_expr -> TYPE_I64
Rule 35    type_expr -> STRUCT LBRACE struct_fields_opt RBRACE
Rule 36    struct_fields_opt -> struct_fields
Rule 37    struct_fields_opt -> empty
Rule 38    struct_fields -> struct_fields struct_field
Rule 39    struct_fields -> struct_field
Rule 40    struct_field -> IDENT COLON type_expr COMMA
Rule 41    struct_field -> IDENT COLON type_expr
Rule 42    type_expr -> QUESTION type_expr
Rule 43    type_expr -> STAR type_expr
Rule 44    type_expr -> LBRACKET RBRACKET type_expr
Rule 45    type_expr -> LBRACKET expression RBRACKET type_expr
Rule 46    block -> LBRACE statements_opt RBRACE
Rule 47    statements_opt -> statements
Rule 48    statements_opt -> empty
Rule 49    statements -> statements statement
Rule 50    statements -> statement
Rule 51    statement -> var_decl SEMICOLON
Rule 52    statement -> return_stmt SEMICOLON
Rule 53    statement -> break_stmt SEMICOLON
Rule 54    statement -> continue_stmt SEMICOLON
Rule 55    statement -> assignment SEMICOLON
Rule 56    statement -> expr_stmt SEMICOLON
Rule 57    statement -> if_stmt
Rule 58    statement -> while_stmt
Rule 59    statement -> for_stmt
Rule 60    return_stmt -> RETURN expression
Rule 61    return_stmt -> RETURN
Rule 62    break_stmt -> BREAK
Rule 63    continue_stmt -> CONTINUE
Rule 64    if_stmt -> IF LPAREN expression RPAREN block else_opt
Rule 65    else_opt -> ELSE block
Rule 66    else_opt -> empty
Rule 67    while_stmt -> WHILE LPAREN expression RPAREN block
Rule 68    for_stmt -> FOR LPAREN expression RPAREN PIPE IDENT PIPE block
Rule 69    assignment -> postfix_expr EQ expression
Rule 70    assignment -> postfix_expr PLUS_EQ expression
Rule 71    assignment -> postfix_expr MINUS_EQ expression
Rule 72    assignment -> postfix_expr STAR_EQ expression
Rule 73    assignment -> postfix_expr SLASH_EQ expression
Rule 74    assignment -> postfix_expr PERCENT_EQ expression
Rule 75    expr_stmt -> expression
Rule 76    expression -> expression DOTDOT expression
Rule 77    expression -> expression PLUS expression
Rule 78    expression -> expression MINUS expression
Rule 79    expression -> expression STAR expression
Rule 80    expression -> expression SLASH expression
Rule 81    expression -> expression PERCENT expression
Rule 82    expression -> expression EQEQ expression
Rule 83    expression -> expression NE expression
Rule 84    expression -> expression LT expression
Rule 85    expression -> expression LE expression
Rule 86    expression -> expression GT expression
Rule 87    expression -> expression GE expression
Rule 88    expression -> expression ANDAND expression
Rule 89    expression -> expression OROR expression
Rule 90    expression -> MINUS expression
Rule 91    expression -> BANG expression
Rule 92    expression -> AMP expression
Rule 93    expression -> QUESTION expression
Rule 94    expression -> postfix_expr
Rule 95    postfix_expr -> primary
Rule 96    postfix_expr -> postfix_expr LPAREN args_opt RPAREN
Rule 97    postfix_expr -> postfix_expr DOT IDENT
Rule 98    postfix_expr -> postfix_expr LBRACKET expression RBRACKET
Rule 99    postfix_expr -> postfix_expr DOT STAR
Rule 100   args_opt -> args
Rule 101   args_opt -> empty
Rule 102   args -> args COMMA expression
Rule 103   args -> expression
Rule 104   primary -> STRUCT LBRACE struct_fields_opt RBRACE
Rule 105   primary -> DOT LBRACE args_opt RBRACE
Rule 106   primary -> INT
Rule 107   primary -> STRING
Rule 108   primary -> CHAR
Rule 109   primary -> TRUE
Rule 110   primary -> FALSE
Rule 111   primary -> NULL
Rule 112   primary -> UNDEFINED
Rule 113   primary -> IDENT
Rule 114   primary -> BUILTIN_IDENT
Rule 115   primary -> LPAREN expression RPAREN
Rule 116   empty -> <empty>

Terminals, with rules where they appear

AMP                  : 92
ANDAND               : 88
ARROW                : 
BANG                 : 91
BREAK                : 62
BUILTIN_IDENT        : 114
CARET                : 
CHAR                 : 108
COLON                : 13 19 40 41
COMMA                : 17 40 102
COMPTIME             : 
CONST                : 8
CONTINUE             : 63
DOT                  : 97 99 105
DOTDOT               : 76
ELSE                 : 65
ENUM                 : 
EQ                   : 8 9 69
EQEQ                 : 82
EXTERN               : 
FALSE                : 110
FATARROW             : 
FN                   : 14
FOR                  : 68
GE                   : 87
GT                   : 86
IDENT                : 8 9 10 14 19 22 40 41 68 97 113
IF                   : 64
INLINE               : 
INT                  : 106
LBRACE               : 35 46 104 105
LBRACKET             : 44 45 98
LE                   : 85
LPAREN               : 14 64 67 68 96 115
LT                   : 84
MINUS                : 78 90
MINUS_EQ             : 71
NE                   : 83
NULL                 : 111
OROR                 : 89
PERCENT              : 81
PERCENT_EQ           : 74
PIPE                 : 68 68
PLUS                 : 77
PLUS_EQ              : 70
PUB                  : 
QUESTION             : 42 93
RBRACE               : 35 46 104 105
RBRACKET             : 44 45 98
RETURN               : 60 61
RPAREN               : 14 64 67 68 96 115
SEMICOLON            : 6 51 52 53 54 55 56
SLASH                : 80
SLASH_EQ             : 73
STAR                 : 43 79 99
STAR_EQ              : 72
STRING               : 107
STRUCT               : 35 104
SWITCH               : 
TILDE                : 
TRUE                 : 109
TYPE_BOOL            : 24
TYPE_I16             : 32
TYPE_I32             : 33
TYPE_I64             : 34
TYPE_I8              : 31
TYPE_ISIZE           : 26
TYPE_U16             : 28
TYPE_U32             : 29
TYPE_U64             : 30
TYPE_U8              : 27
TYPE_USIZE           : 25
TYPE_VOID            : 23
UNDEFINED            : 112
UNION                : 
VAR                  : 9 10
WHILE                : 67
error                : 

Nonterminals, with rules where they appear

args                 : 100 102
args_opt             : 96 105
assignment           : 55
block                : 14 64 65 67 68
break_stmt           : 53
continue_stmt        : 54
declaration          : 4 5
declarations         : 2 4
declarations_opt     : 1
else_opt             : 64
empty                : 3 12 16 21 37 48 66 101
expr_stmt            : 56
expression           : 8 9 45 60 64 67 68 69 70 71 72 73 74 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 91 92 93 98 102 103 115
fn_decl              : 7
for_stmt             : 59
if_stmt              : 57
param                : 17 18
params               : 15 17
params_opt           : 14
postfix_expr         : 69 70 71 72 73 74 94 96 97 98 99
primary              : 95
program              : 0
return_stmt          : 52
return_type_opt      : 14
statement            : 49 50
statements           : 47 49
statements_opt       : 46
struct_field         : 38 39
struct_fields        : 36 38
struct_fields_opt    : 35 104
type_annotation      : 10 11
type_annotation_opt  : 8 9
type_expr            : 13 19 20 40 41 42 43 44 45
var_decl             : 6 51
while_stmt           : 58

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declarations_opt
    (2) declarations_opt -> . declarations
    (3) declarations_opt -> . empty
    (4) declarations -> . declarations declaration
    (5) declarations -> . declaration
    (116) empty -> .
    (6) declaration -> . var_decl SEMICOLON
    (7) declaration -> . fn_decl
    (8) var_decl -> . CONST IDENT type_annotation_opt EQ expression
    (9) var_decl -> . VAR IDENT type_annotation_opt EQ expression
    (10) var_decl -> . VAR IDENT type_annotation
    (14) fn_decl -> . FN IDENT LPAREN params_opt RPAREN return_type_opt block

    $end            reduce using rule 116 (empty -> .)
    CONST           shift and go to state 8
    VAR             shift and go to state 9
    FN              shift and go to state 10

    program                        shift and go to state 1
    declarations_opt               shift and go to state 2
    declarations                   shift and go to state 3
    empty                          shift and go to state 4
    declaration                    shift and go to state 5
    var_decl                       shift and go to state 6
    fn_decl                        shift and go to state 7

state 1

    (0) S' -> program .



state 2

    (1) program -> declarations_opt .

    $end            reduce using rule 1 (program -> declarations_opt .)


state 3

    (2) declarations_opt -> declarations .
    (4) declarations -> declarations . declaration
    (6) declaration -> . var_decl SEMICOLON
    (7) declaration -> . fn_decl
    (8) var_decl -> . CONST IDENT type_annotation_opt EQ expression
    (9) var_decl -> . VAR IDENT type_annotation_opt EQ expression
    (10) var_decl -> . VAR IDENT type_annotation
    (14) fn_decl -> . FN IDENT LPAREN params_opt RPAREN return_type_opt block

    $end            reduce using rule 2 (declarations_opt -> declarations .)
    CONST           shift and go to state 8
    VAR             shift and go to state 9
    FN              shift and go to state 10

    declaration                    shift and go to state 11
    var_decl                       shift and go to state 6
    fn_decl                        shift and go to state 7

state 4

    (3) declarations_opt -> empty .

    $end            reduce using rule 3 (declarations_opt -> empty .)


state 5

    (5) declarations -> declaration .

    CONST           reduce using rule 5 (declarations -> declaration .)
    VAR             reduce using rule 5 (declarations -> declaration .)
    FN              reduce using rule 5 (declarations -> declaration .)
    $end            reduce using rule 5 (declarations -> declaration .)


state 6

    (6) declaration -> var_decl . SEMICOLON

    SEMICOLON       shift and go to state 12


state 7

    (7) declaration -> fn_decl .

    CONST           reduce using rule 7 (declaration -> fn_decl .)
    VAR             reduce using rule 7 (declaration -> fn_decl .)
    FN              reduce using rule 7 (declaration -> fn_decl .)
    $end            reduce using rule 7 (declaration -> fn_decl .)


state 8

    (8) var_decl -> CONST . IDENT type_annotation_opt EQ expression

    IDENT           shift and go to state 13


state 9

    (9) var_decl -> VAR . IDENT type_annotation_opt EQ expression
    (10) var_decl -> VAR . IDENT type_annotation

    IDENT           shift and go to state 14


state 10

    (14) fn_decl -> FN . IDENT LPAREN params_opt RPAREN return_type_opt block

    IDENT           shift and go to state 15


state 11

    (4) declarations -> declarations declaration .

    CONST           reduce using rule 4 (declarations -> declarations declaration .)
    VAR             reduce using rule 4 (declarations -> declarations declaration .)
    FN              reduce using rule 4 (declarations -> declarations declaration .)
    $end            reduce using rule 4 (declarations -> declarations declaration .)


state 12

    (6) declaration -> var_decl SEMICOLON .

    CONST           reduce using rule 6 (declaration -> var_decl SEMICOLON .)
    VAR             reduce using rule 6 (declaration -> var_decl SEMICOLON .)
    FN              reduce using rule 6 (declaration -> var_decl SEMICOLON .)
    $end            reduce using rule 6 (declaration -> var_decl SEMICOLON .)


state 13

    (8) var_decl -> CONST IDENT . type_annotation_opt EQ expression
    (11) type_annotation_opt -> . type_annotation
    (12) type_annotation_opt -> . empty
    (13) type_annotation -> . COLON type_expr
    (116) empty -> .

    COLON           shift and go to state 19
    EQ              reduce using rule 116 (empty -> .)

    type_annotation_opt            shift and go to state 16
    type_annotation                shift and go to state 17
    empty                          shift and go to state 18

state 14

    (9) var_decl -> VAR IDENT . type_annotation_opt EQ expression
    (10) var_decl -> VAR IDENT . type_annotation
    (11) type_annotation_opt -> . type_annotation
    (12) type_annotation_opt -> . empty
    (13) type_annotation -> . COLON type_expr
    (116) empty -> .

    COLON           shift and go to state 19
    EQ              reduce using rule 116 (empty -> .)

    type_annotation_opt            shift and go to state 20
    type_annotation                shift and go to state 21
    empty                          shift and go to state 18

state 15

    (14) fn_decl -> FN IDENT . LPAREN params_opt RPAREN return_type_opt block

    LPAREN          shift and go to state 22


state 16

    (8) var_decl -> CONST IDENT type_annotation_opt . EQ expression

    EQ              shift and go to state 23


state 17

    (11) type_annotation_opt -> type_annotation .

    EQ              reduce using rule 11 (type_annotation_opt -> type_annotation .)


state 18

    (12) type_annotation_opt -> empty .

    EQ              reduce using rule 12 (type_annotation_opt -> empty .)


state 19

    (13) type_annotation -> COLON . type_expr
    (22) type_expr -> . IDENT
    (23) type_expr -> . TYPE_VOID
    (24) type_expr -> . TYPE_BOOL
    (25) type_expr -> . TYPE_USIZE
    (26) type_expr -> . TYPE_ISIZE
    (27) type_expr -> . TYPE_U8
    (28) type_expr -> . TYPE_U16
    (29) type_expr -> . TYPE_U32
    (30) type_expr -> . TYPE_U64
    (31) type_expr -> . TYPE_I8
    (32) type_expr -> . TYPE_I16
    (33) type_expr -> . TYPE_I32
    (34) type_expr -> . TYPE_I64
    (35) type_expr -> . STRUCT LBRACE struct_fields_opt RBRACE
    (42) type_expr -> . QUESTION type_expr
    (43) type_expr -> . STAR type_expr
    (44) type_expr -> . LBRACKET RBRACKET type_expr
    (45) type_expr -> . LBRACKET expression RBRACKET type_expr

    IDENT           shift and go to state 25
    TYPE_VOID       shift and go to state 26
    TYPE_BOOL       shift and go to state 27
    TYPE_USIZE      shift and go to state 28
    TYPE_ISIZE      shift and go to state 29
    TYPE_U8         shift and go to state 30
    TYPE_U16        shift and go to state 31
    TYPE_U32        shift and go to state 32
    TYPE_U64        shift and go to state 33
    TYPE_I8         shift and go to state 34
    TYPE_I16        shift and go to state 35
    TYPE_I32        shift and go to state 36
    TYPE_I64        shift and go to state 37
    STRUCT          shift and go to state 38
    QUESTION        shift and go to state 39
    STAR            shift and go to state 40
    LBRACKET        shift and go to state 41

    type_expr                      shift and go to state 24

state 20

    (9) var_decl -> VAR IDENT type_annotation_opt . EQ expression

    EQ              shift and go to state 42


state 21

    (10) var_decl -> VAR IDENT type_annotation .
    (11) type_annotation_opt -> type_annotation .

    SEMICOLON       reduce using rule 10 (var_decl -> VAR IDENT type_annotation .)
    EQ              reduce using rule 11 (type_annotation_opt -> type_annotation .)


state 22

    (14) fn_decl -> FN IDENT LPAREN . params_opt RPAREN return_type_opt block
    (15) params_opt -> . params
    (16) params_opt -> . empty
    (17) params -> . params COMMA param
    (18) params -> . param
    (116) empty -> .
    (19) param -> . IDENT COLON type_expr

    RPAREN          reduce using rule 116 (empty -> .)
    IDENT           shift and go to state 43

    params_opt                     shift and go to state 44
    params                         shift and go to state 45
    empty                          shift and go to state 46
    param                          shift and go to state 47

state 23

    (8) var_decl -> CONST IDENT type_annotation_opt EQ . expression
    (76) expression -> . expression DOTDOT expression
    (77) expression -> . expression PLUS expression
    (78) expression -> . expression MINUS expression
    (79) expression -> . expression STAR expression
    (80) expression -> . expression SLASH expression
    (81) expression -> . expression PERCENT expression
    (82) expression -> . expression EQEQ expression
    (83) expression -> . expression NE expression
    (84) expression -> . expression LT expression
    (85) expression -> . expression LE expression
    (86) expression -> . expression GT expression
    (87) expression -> . expression GE expression
    (88) expression -> . expression ANDAND expression
    (89) expression -> . expression OROR expression
    (90) expression -> . MINUS expression
    (91) expression -> . BANG expression
    (92) expression -> . AMP expression
    (93) expression -> . QUESTION expression
    (94) expression -> . postfix_expr
    (95) postfix_expr -> . primary
    (96) postfix_expr -> . postfix_expr LPAREN args_opt RPAREN
    (97) postfix_expr -> . postfix_expr DOT IDENT
    (98) postfix_expr -> . postfix_expr LBRACKET expression RBRACKET
    (99) postfix_expr -> . postfix_expr DOT STAR
    (104) primary -> . STRUCT LBRACE struct_fields_opt RBRACE
    (105) primary -> . DOT LBRACE args_opt RBRACE
    (106) primary -> . INT
    (107) primary -> . STRING
    (108) primary -> . CHAR
    (109) primary -> . TRUE
    (110) primary -> . FALSE
    (111) primary -> . NULL
    (112) primary -> . UNDEFINED
    (113) primary -> . IDENT
    (114) primary -> . BUILTIN_IDENT
    (115) primary -> . LPAREN expression RPAREN

    MINUS           shift and go to state 50
    BANG            shift and go to state 51
    AMP             shift and go to state 52
    QUESTION        shift and go to state 53
    STRUCT          shift and go to state 58
    DOT             shift and go to state 57
    INT             shift and go to state 59
    STRING          shift and go to state 60
    CHAR            shift and go to state 61
    TRUE            shift and go to state 62
    FALSE           shift and go to state 63
    NULL            shift and go to state 64
    UNDEFINED       shift and go to state 65
    IDENT           shift and go to state 48
    BUILTIN_IDENT   shift and go to state 66
    LPAREN          shift and go to state 56

    expression                     shift and go to state 49
    postfix_expr                   shift and go to state 54
    primary                        shift and go to state 55

state 24

    (13) type_annotation -> COLON type_expr .

    EQ              reduce using rule 13 (type_annotation -> COLON type_expr .)
    SEMICOLON       reduce using rule 13 (type_annotation -> COLON type_expr .)


state 25

    (22) type_expr -> IDENT .

    EQ              reduce using rule 22 (type_expr -> IDENT .)
    SEMICOLON       reduce using rule 22 (type_expr -> IDENT .)
    COMMA           reduce using rule 22 (type_expr -> IDENT .)
    RPAREN          reduce using rule 22 (type_expr -> IDENT .)
    LBRACE          reduce using rule 22 (type_expr -> IDENT .)
    IDENT           reduce using rule 22 (type_expr -> IDENT .)
    RBRACE          reduce using rule 22 (type_expr -> IDENT .)


state 26

    (23) type_expr -> TYPE_VOID .

    EQ              reduce using rule 23 (type_expr -> TYPE_VOID .)
    SEMICOLON       reduce using rule 23 (type_expr -> TYPE_VOID .)
    COMMA           reduce using rule 23 (type_expr -> TYPE_VOID .)
    RPAREN          reduce using rule 23 (type_expr -> TYPE_VOID .)
    LBRACE          reduce using rule 23 (type_expr -> TYPE_VOID .)
    IDENT           reduce using rule 23 (type_expr -> TYPE_VOID .)
    RBRACE          reduce using rule 23 (type_expr -> TYPE_VOID .)


state 27

    (24) type_expr -> TYPE_BOOL .

    EQ              reduce using rule 24 (type_expr -> TYPE_BOOL .)
    SEMICOLON       reduce using rule 24 (type_expr -> TYPE_BOOL .)
    COMMA           reduce using rule 24 (type_expr -> TYPE_BOOL .)
    RPAREN          reduce using rule 24 (type_expr -> TYPE_BOOL .)
    LBRACE          reduce using rule 24 (type_expr -> TYPE_BOOL .)
    IDENT           reduce using rule 24 (type_expr -> TYPE_BOOL .)
    RBRACE          reduce using rule 24 (type_expr -> TYPE_BOOL .)


state 28

    (25) type_expr -> TYPE_USIZE .

    EQ              reduce using rule 25 (type_expr -> TYPE_USIZE .)
    SEMICOLON       reduce using rule 25 (type_expr -> TYPE_USIZE .)
    COMMA           reduce using rule 25 (type_expr -> TYPE_USIZE .)
    RPAREN          reduce using rule 25 (type_expr -> TYPE_USIZE .)
    LBRACE          reduce using rule 25 (type_expr -> TYPE_USIZE .)
    IDENT           reduce using rule 25 (type_expr -> TYPE_USIZE .)
    RBRACE          reduce using rule 25 (type_expr -> TYPE_USIZE .)


state 29

    (26) type_expr -> TYPE_ISIZE .

    EQ              reduce using rule 26 (type_expr -> TYPE_ISIZE .)
    SEMICOLON       reduce using rule 26 (type_expr -> TYPE_ISIZE .)
    COMMA           reduce using rule 26 (type_expr -> TYPE_ISIZE .)
    RPAREN          reduce using rule 26 (type_expr -> TYPE_ISIZE .)
    LBRACE          reduce using rule 26 (type_expr -> TYPE_ISIZE .)
    IDENT           reduce using rule 26 (type_expr -> TYPE_ISIZE .)
    RBRACE          reduce using rule 26 (type_expr -> TYPE_ISIZE .)


state 30

    (27) type_expr -> TYPE_U8 .

    EQ              reduce using rule 27 (type_expr -> TYPE_U8 .)
    SEMICOLON       reduce using rule 27 (type_expr -> TYPE_U8 .)
    COMMA           reduce using rule 27 (type_expr -> TYPE_U8 .)
    RPAREN          reduce using rule 27 (type_expr -> TYPE_U8 .)
    LBRACE          reduce using rule 27 (type_expr -> TYPE_U8 .)
    IDENT           reduce using rule 27 (type_expr -> TYPE_U8 .)
    RBRACE          reduce using rule 27 (type_expr -> TYPE_U8 .)


state 31

    (28) type_expr -> TYPE_U16 .

    EQ              reduce using rule 28 (type_expr -> TYPE_U16 .)
    SEMICOLON       reduce using rule 28 (type_expr -> TYPE_U16 .)
    COMMA           reduce using rule 28 (type_expr -> TYPE_U16 .)
    RPAREN          reduce using rule 28 (type_expr -> TYPE_U16 .)
    LBRACE          reduce using rule 28 (type_expr -> TYPE_U16 .)
    IDENT           reduce using rule 28 (type_expr -> TYPE_U16 .)
    RBRACE          reduce using rule 28 (type_expr -> TYPE_U16 .)


state 32

    (29) type_expr -> TYPE_U32 .
